--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -30,4 +35,5 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
