--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data android:name="AA_DB_NAME" android:value="biblospk.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data android:name="AA_MODELS" android:value="pl.nkg.biblospk.data.Book" />
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name">
