--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="AA_DB_NAME" android:value="biblospk.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
-        <meta-data android:name="AA_MODELS" android:value="pl.nkg.biblospk.data.Book" />
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="biblospk.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="pl.nkg.biblospk.data.Book" />
 
         <activity
             android:name=".ui.MainActivity"
@@ -28,15 +33,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.LoginActivity"
-            android:label="@string/title_activity_login">
-        </activity>
+            android:label="@string/title_activity_login"></activity>
 
         <service
             android:name=".services.BiblosService"
             android:exported="false" />
+        <service
+            android:name=".services.NotifyService"
+            android:enabled="true"
+            android:exported="false"></service>
     </application>
 
 </manifest>
