--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pl.nkg.biblospk">
+    package="pl.nkg.biblospk"
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,6 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="AA_DB_NAME"
             android:value="biblospk.db" />
@@ -39,21 +41,20 @@
             android:name=".ui.LoginActivity"
             android:label="@string/title_activity_login" />
 
-        <service
-            android:name=".services.BiblosService"
-            android:exported="false" />
-        <service
-            android:name=".services.NotifyService"
-            android:enabled="true"
-            android:exported="false" />
+        <service android:name=".services.BiblosService" />
+
+        <service android:name=".services.NotifyService" />
 
         <receiver android:name=".receivers.BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.ACTION_EXTERNAL_APPLICATIONS_AVAILABLE" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
         </receiver>
 
         <receiver android:name=".receivers.AlarmReceiver" />
+
     </application>
 
 </manifest>
