--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         minSdkVersion 10
         targetSdkVersion 25
         versionCode 2
-        versionName "1.0 beta 2"
+        versionName "1.0 beta 1"
         signingConfig signingConfigs.config
     }
     buildTypes {
@@ -64,7 +64,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:preference-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
-    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'commons-io:commons-io:2.5'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
